--- a/app.css
+++ b/app.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @media (max-width: 600px) {}
 
 @media (min-width: 1599px) {}
@@ -6,6 +12,7 @@
   --main-bg-color: #55b9f3;
   --darker-bg-color: #1a78af;
   --accent-color: #e31b6d;
+  --text-light: #f2f2f2;
   --nav-height: 50px;
 }
 
@@ -15,42 +22,47 @@ div.root {
 
 .name-font {
   font-family: 'Varela Round', sans-serif;
-  font-size: 5em;
+  font-size: 3rem;
 }
 
 .content-font {
   font-family: 'Noto Serif', serif;
-  font-size: 5rem;
+  font-size: 1rem;
 }
 
-.overflow-wrap {
-  overflow-x: hidden;
-}
-
-.height-fix {
-  height: calc(100vh - var(--nav-height));
-}
-
-nav {
+.nav-dock {
   bottom: 0;
   left: 0;
   position: absolute;
   background: var(--darker-bg-color);
   height: var(--nav-height);
   text-align: left;
+  overflow: hidden;
   width: 100%;
   z-index: 100;
 }
 
-nav.fixed {
-  bottom: inherit;
-  left: 0;
-  position: fixed;
-  top: 0;
+.nav-dock a {
+  float: left;
+  display: block;
+  color: var(--text-light);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 1.1rem;
 }
 
-nav.fixed.desk {
-  animation: popDown 0.5s;
+.nav-dock a.current {
+  color: var(--accent-color);
+}
+
+@media (min-width: 600px) {
+  .nav-dock.fixed {
+    left: 0;
+    top: 0;
+    position: sticky;
+    animation: popDown 0.5s;
+  }
 }
 
 @keyframes popDown {
@@ -59,36 +71,12 @@ nav.fixed.desk {
   }
 }
 
-nav .link-wrap {
-  height: 0;
-  max-width: 1200px;
-  overflow: hidden;
-  position: absolute;
-  top: var(--nav-height);
-  transition: height 0.3s ease-out;
-  width: 100%;
+.flex-section {
+  display: flex;
+  height: calc(100vh - var(--nav-height));
 }
 
-nav .link-wrap.visible {
-  height: 220px;
-}
-
-nav .link-wrap div {
-  cursor: pointer;
-  font-size: 12pt;
-  padding: 12px 20px;
-  text-transform: uppercase;
-  transition: color 0.5s;
-}
-
-nav .link-wrap div:first-child {
-  padding: 25px 20px 12px 20px;
-}
-
-nav .link-wrap div:hover {
-  color: var(--accent-color);
-}
-
-nav .active {
-  color: var(--accent-color);
+.home {
+  align-items: center;
+  justify-content: center;
 }
