--- a/app.css
+++ b/app.css
@@ -8,26 +8,32 @@
 
 @media (min-width: 1599px) {}
 
+html, body {
+  scroll-behavior: smooth;
+  font-size: 15px;
+}
+
 :root {
   --main-bg-color: #55b9f3;
   --darker-bg-color: #1a78af;
   --accent-color: #e31b6d;
   --text-light: #f2f2f2;
-  --nav-height: 50px;
+  --text-color: #212121;
+  --nav-height: 3rem;
 }
 
 div.root {
   background-color: var(--main-bg-color);
 }
 
-.name-font {
+.font-name {
   font-family: 'Varela Round', sans-serif;
-  font-size: 3rem;
+  font-size: 6rem;
 }
 
-.content-font {
+.font-content {
   font-family: 'Noto Serif', serif;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 .nav-dock {
@@ -60,7 +66,7 @@ div.root {
   .nav-dock.fixed {
     left: 0;
     top: 0;
-    position: sticky;
+    position: fixed;
     animation: popDown 0.5s;
   }
 }
@@ -71,12 +77,71 @@ div.root {
   }
 }
 
-.flex-section {
+.flex {
   display: flex;
-  height: calc(100vh - var(--nav-height));
 }
 
-.home {
+.flex.flex-column {
+  flex-direction: column;
+}
+
+.flex.flex-row {
+  flex-direction: row;
+}
+
+.flex-items-home {
+  flex-grow: 1;
+}
+
+.flex.flex-center-bottom-content {
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.flex.flex-center-content {
   align-items: center;
   justify-content: center;
+}
+
+.flex.flex-stretch-content {
+  align-items: stretch;
+  justify-content: stretch;
+}
+
+.flex.align-self-end {
+  align-self: flex-end;
+}
+
+.nav-bar-margins {
+  margin-top: var(--nav-height);
+}
+
+.fill-viewport-height {
+  height: 100vh;
+}
+
+.button {
+  border: 5px solid red;
+}
+
+.button.button-big-square {
+  width: 200px;
+  height: 200px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.button.button-big-square a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  width: 100%;
+  color: var(--text-color);
+}
+
+.button.button-big-square a:hover {
+  color: var(--accent-color);
+}
+
+a:hover {
+  color: var(--accent-color);
 }
