--- a/app.css
+++ b/app.css
@@ -145,6 +145,7 @@ section {
 }
 .section-title {
     margin-bottom: 30px;
+    text-align: center;
 }
 @keyframes popDown {
     0% {
@@ -196,7 +197,6 @@ section {
     padding-left: 10px;
     padding-right: 10px;
     max-width: 500px;
-    max-height: 600px;
     margin-bottom: var(--project-spacing);
     padding-bottom: var(--project-spacing);
 }
@@ -246,6 +246,10 @@ section {
     }
 }
 @media (max-width: 900px) {
+    .project-image-container {
+        width: 100vw;
+        max-width: 500px;
+    }
     .project-image {
         max-width: 400px;
         max-height: 400px;
@@ -258,9 +262,6 @@ section {
         width: 100vw;
         padding-left: 0px;
         padding-right: 0px;
-    }
-    .project-image-container {
-        width: 100vw;
     }
     .project-image {
         width: 100vw;
