--- a/app.css
+++ b/app.css
@@ -41,9 +41,9 @@ section {
     font-size: 24px;
     color: var(--text-light);
 }
-@media (max-width: 600px), (max-height: 600px) {
+@media (max-width: 900px), (max-height: 900px) {
     .font-name {
-        font-size: 64px;
+        font-size: 58px;
     }
     .font-content {
         font-size: 18px;
@@ -80,11 +80,12 @@ section {
 .home-text {
     justify-content: flex-start;
     align-items: center;
-    flex-grow: .5;
+    flex-grow: 1;
     z-index: 2;
 }
 .home-text-row {
     max-width: 900px;
+    padding: 5px;
 }
 .home-text-row-list {
     align-items: center;
@@ -167,7 +168,10 @@ section {
     position: absolute;
     z-index: 1;
 }
-.shape.circle {
+.shape-container {
+    position: relative;
+}
+.shape.circle_home {
     width: 400px;
     height: 400px;
     top: -100px;
@@ -175,8 +179,14 @@ section {
     background: var(--accent-color);
     border-radius: 50%;
 }
-.shape-container {
-    position: relative;
+.shape.circle_home_picture {
+    top: 500px;
+    left: 800px;
+}
+@media (max-width: 1050px) {
+    .shape.circle_home_picture {
+        display: none;
+    }
 }
 
 /* 
@@ -240,10 +250,8 @@ section {
         justify-content: center;
     }
 }
-@media (min-width: 900px) {
-    .project-last-element {
-        border-bottom: none; 
-    }
+.project-last-element {
+    border-bottom: none; 
 }
 @media (max-width: 900px) {
     .project-image-container {
@@ -332,6 +340,7 @@ section {
 }
 .resume-link {
     margin-left: 30px;
+    color:orange;
 }
 
 /* 
